<resources>
    <string name="app_name">買い物メモ</string>
    <string name="plain_text">アイテム名を入力</string>
    <string name="add_button">アイテムを追加</string>
    <string name="unComplete_text">未購入</string>
    <string name="complete_text">購入済</string>
    <string name="edit_button">編集</string>
    <string name="tv_item_unit">個</string>
    <string name="bt_reacquire">更新する</string>
    <string name="tv_item_name">アイテム名</string>
    <string name="tv_item_quantity">アイテム数</string>
    <string name="bt_save">保存</string>
    <string name="bt_back">戻る</string>
    <string name="dialog_title">アイテムの削除</string>
    <string name="dialog_msg">を削除しますか</string>
    <string name="dialog_btn_ok">削除する</string>
    <string name="dialog_btn_ng">キャンセル</string>
</resources>